objects/vlocity_ins__PromotionIncludedProduct__c.object
<CustomObject>
    <description>DEPRECATED. Use Promotion Item instead.</description>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Included Products</relationshipLabel>
        <relationshipName>PromotionIncludedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Promotion Included Products</relationshipLabel>
        <relationshipName>PromotionIncludedProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Promotion Included Product</label>
    <nameField>
        <label>Promotion Included Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Included Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>